--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -1,16 +1,15 @@
 {
   "manifest_version": 2,
   "name": "The Hate Bin Extension",
-  "version": "0.3",
+  "version": "0.4",
   "permissions": [
-      "http://www.hatebin.se/"
+      "storage"
   ],
   "content_scripts": [
         {
             "run_at": "document_end",
             "matches": [
-                "https://*.twitter.com/*", 
-                "http://*.twitter.com/*"
+                "*://*.twitter.com/*"
             ],
             "css": [
                 "css/foundation.css",
@@ -20,7 +19,18 @@
                 "scripts/libs/jquery-2.1.4.min.js", 
                 "scripts/libs/underscore-min.js",
                 "scripts/libs/foundation.min.js",
-                "scripts/content.js"
+                "scripts/twitter.js"
+            ]
+        },
+        {
+            "run_at": "document_end",
+            "matches": [
+                "*://*.hatebin.se/*",
+                "*://localhost/hatebin/*"
+            ],
+            "js": [
+                "scripts/libs/jquery-2.1.4.min.js",
+                "scripts/hatebin.js"
             ]
         }
     ],
